--- a/bin/assets/imgui.ini
+++ b/bin/assets/imgui.ini
@@ -15,21 +15,26 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][SelectedWindow]
-Pos=1209,246
-Size=327,546
+Pos=1209,0
+Size=327,227
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][ConfigWindow]
+Pos=1209,229
+Size=327,563
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][ConfigWindow]
-Pos=1209,0
-Size=327,244
+[Window][TagsWindow]
+Pos=60,60
+Size=72,38
 Collapsed=0
-DockId=0x00000003,0
 
 [Docking][Data]
 DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1536,792 Split=X
   DockNode    ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1207,792 CentralNode=1 Selected=0xBA965914
   DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=327,792 Split=Y Selected=0xD3BDAC8E
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=149,244 Selected=0xD3BDAC8E
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=149,546 Selected=0xA06D4B15
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=327,227 Selected=0xA06D4B15
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=327,563 Selected=0xD3BDAC8E
 
