--- a/bin/assets/imgui.ini
+++ b/bin/assets/imgui.ini
@@ -1,6 +1,6 @@
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1536,792
+Size=1536,798
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,41 @@ Size=400,400
 Collapsed=0
 
 [Window][GameWindow]
-Pos=0,0
-Size=1207,792
+Pos=260,0
+Size=1007,798
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000001,1
 
 [Window][SelectedWindow]
-Pos=1209,0
-Size=327,227
+Pos=1269,0
+Size=267,798
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][ConfigWindow]
-Pos=1209,229
-Size=327,563
+Pos=0,205
+Size=258,593
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][TagsWindow]
-Pos=60,60
-Size=72,38
+Pos=0,0
+Size=258,203
 Collapsed=0
+DockId=0x00000003,0
+
+[Window][EditorWindow]
+Pos=260,0
+Size=1007,798
+Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1536,792 Split=X
-  DockNode    ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1207,792 CentralNode=1 Selected=0xBA965914
-  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=327,792 Split=Y Selected=0xD3BDAC8E
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=327,227 Selected=0xA06D4B15
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=327,563 Selected=0xD3BDAC8E
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1536,798 Split=X
+  DockNode    ID=0x00000005 Parent=0x7C6B3D9B SizeRef=258,798 Split=Y Selected=0x0C31A64A
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=446,203 Selected=0x0C31A64A
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=446,593 Selected=0xD3BDAC8E
+  DockNode    ID=0x00000006 Parent=0x7C6B3D9B SizeRef=1276,798 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1007,792 CentralNode=1 Selected=0xBA965914
+    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=267,792 Selected=0xA06D4B15
 
